# proxxy

./: .gitignore  10domain.sh  CHANGELOG.md  Cargo.toml  LSR_TASKS.md  MIGRATIONS.md  NUCLEI_TASKS.md  README.md  REPETER-TEST.md  RESPONSE_BODY_CAPTURE.md  TESTING_TOOLS.md  graphql_test_queries.md  justfile  monitor.sh  multi_agent_load_test.sh  send_test_requests.py  tasks.md  test_all_vulns.sh  test_attack_engine.sh  test_graphql_queries.py  test_integration.py  test_orch_small_stress.sh  test_performance_monitoring.py  test_proxy_traffic.sh  test_response_body_capture.py  test_server.rs  test_simple.sh  test_units.sh
.kiro/specs/cli-project-support/: design.md  requirements.md  tasks.md
.kiro/specs/distributed-mitm-proxy/: design.md  requirements.md  tasks.md
.kiro/specs/repeater-intruder/: design.md  requirements.md  tasks.md
.kiro/specs/response-body-capture/: design.md  requirements.md  tasks.md
attack-engine/: Cargo.toml
attack-engine/proptest-regressions/: tests.txt
attack-engine/proptest-regressions/tests/: security_error_handling_test.txt
attack-engine/src/: attack_modes.rs  error.rs  execution.rs  lib.rs  parser.rs  payload.rs  resource.rs  security.rs  tests.rs  traits.rs  types.rs
attack-engine/src/tests/: security_error_handling_test.rs
docs/: API_COMPATIBILITY_ANALYSIS.md  API_DOCS_README.md  BACKEND_API_SPEC.md  FRONTEND_GRAPHQL_OPTIMIZATION.md  GRAPHQL_LAZY_LOADING_ANALYSIS.md  GRAPHQL_PERFORMANCE_OPTIMIZATION.md  LOAD_TESTING_GUIDE.md  ORCHESTRATOR_ARCHITECTURE.md  TRAFFIC_POLICY.md  book.toml
docs/book/: 404.html  api-examples.html  api-reference.html  architecture.html  backend-api.html  contributing.html  flow-engine.html  index.html  print.html  searcher-c2a407aa.js  searchindex-31b09624.js  searchindex-5a954cec.js  searchindex-855025fa.js  toc-11e4d50a.js  toc-7df8d176.js  toc.html  traffic-policy.html
docs/src/: README.md  SUMMARY.md  api-examples.md  api-reference.md  architecture.md  backend-api.md  contributing.md  flow-engine.md  project-management.md  scope-management.md
flow-engine/: Cargo.toml
flow-engine/src/: error.rs  lib.rs
flow-engine/src/flow/: analyzer.rs  browser.rs  mod.rs  model.rs  page.rs  recorder.rs  replayer.rs
orchestrator/: Cargo.toml  build.rs
orchestrator/migrations/: 20240101_init.sql  20240102_project_settings.sql  20240110_add_repeater_tables.sql  20240111_add_intruder_tables.sql  20240112_add_payload_sets.sql  20240115_add_flow_profiles.sql  20240116_add_scope_rules.sql
orchestrator/src/: database.rs  error_handling.rs  grpc.rs  health.rs  http.rs  intruder.rs  lib.rs  logging.rs  main.rs  metrics.rs  performance_monitoring.rs  project_startup.rs  recording_service.rs  repeater.rs  resource_manager.rs  result_streaming.rs  scope.rs  server.rs  session_integration.rs  session_manager.rs
orchestrator/src/database/: flow.rs  intruder.rs  repeater.rs
orchestrator/src/graphql/: flow_graphql.rs  mod.rs
orchestrator/src/intruder/: distribution.rs  execution.rs
orchestrator/src/models/: settings.rs
orchestrator/tests/: cli_argument_test.proptest-regressions  cli_argument_test.rs  core_functionality_validation.rs  database_test.rs  graphql_integration_test.rs  graphql_intruder_test.rs  graphql_test.rs  grpc_test.rs  intruder_distribution_test.rs  project_startup_test.proptest-regressions  project_startup_test.rs  repeater_intruder_database_test.proptest-regressions  repeater_intruder_database_test.rs  repeater_test.rs  session_integration_test.rs  session_test.rs  system_metrics_test.rs
proto/: TAGS.md  proxy.proto
proxxy-extension/: CONFIGURATION_FEATURE.md  CRITICAL_FIXES.md  HOT_RELOAD_FEATURES.md  IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING_TR.md  debug-native-host.py  dev-server.sh  install-native-host.sh  quick-fix.sh  tasklist.md
proxxy-extension/extensions/proxxy-chrome/: README.md  com.proxxy.native.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
proxxy-gui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
proxxy-gui/src/: App.tsx  index.css  main.tsx  metadata.json  types.ts
proxxy-gui/src-tauri/: Cargo.toml  tauri.conf.json
proxxy-gui/src-tauri/capabilities/: default.json
proxxy-gui/src-tauri/src/: lib.rs  main.rs
proxxy-gui/src/components/: AgentCard.tsx  AgentDetailView.tsx  AgentsView.tsx  ConnectionStatusIndicator.tsx  CustomNodes.tsx  Dashboard.tsx  DesignerView.tsx  GraphQLTest.tsx  HistoryView.tsx  HomeView.tsx  IntruderView.tsx  LogConsole.tsx  MetricCard.tsx  Nodes.tsx  OrchestratorConnectionError.tsx  Panels.tsx  ProjectGuard.tsx  PropertySidebar.tsx  ProxyView.tsx  RepeaterView.tsx  ScopeManager.tsx  SettingsView.tsx  Sidebars.tsx  StateExample.tsx  TrafficTable.tsx
proxxy-gui/src/graphql/: client.ts  index.ts  operations.ts
proxxy-gui/src/hooks/: useErrorHandler.ts  useGraphQLConnection.ts  useRequests.ts  useWebSocketManager.ts
proxxy-gui/src/layouts/: MainLayout.tsx
proxxy-gui/src/lib/: api.ts  http-utils.ts
proxxy-gui/src/services/: geminiService.ts
proxxy-gui/src/store/: StoreProvider.tsx  appStore.ts  connectionStore.ts  filtersStore.ts  index.ts  preferencesStore.ts  repeaterStore.ts  (+2 more)
proxy-agent/: Cargo.toml  example-body-capture-config.json
proxy-agent/src/: client.rs  config_test.rs  lib.rs  main.rs
proxy-common/: Cargo.toml
proxy-common/src/: lib.rs  session.rs
proxy-core/: Cargo.toml  build.rs
proxy-core/src/: admin.rs  ca.rs  certificates.rs  config.rs  controller.rs  error.rs  filter.rs  handlers.rs  lib.rs  memory_manager.rs  memory_manager_integration_test.rs  policy.rs  proxy.rs  system_metrics.rs
proxy-core/tests/: controller_test.rs  integration_test.rs  proto_test.rs  system_metrics_test.proptest-regressions  system_metrics_test.rs
test-server/: Cargo.toml  test_server.rs
test-server/static/: test.json
workspace-tests/: Cargo.toml
workspace-tests/src/: lib.rs
workspace-tests/tests/: crate_entry_point_consistency.rs  end_to_end_traffic.rs  workspace_configuration_validation.rs  workspace_dependency_consistency.proptest-regressions  workspace_dependency_consistency.rs
(+69 files in other folders)
