[workspace]
members = [
    "proxy-core",
    "proxy-agent", 
    "orchestrator",
    "proxxy-gui/src-tauri",
    "workspace-tests"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["rooterspace"]
license = "MIT"
repository = "https://github.com/rooterspace/distributed-mitm-proxy"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP and proxy functionality
hudsucker = "0.20"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"

# Certificate generation
rcgen = "0.12"

# gRPC and Protocol Buffers
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"
tokio-stream = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Tauri desktop app
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing
proptest = "1.4"

# System info
hostname = "0.4"

# Concurrency and utilities
dashmap = "5.5"
wildmatch = "2.3"