[workspace]
resolver = "2"
members = [
    "proxy-core",
    "proxy-agent", 
    "proxy-common",
    "attack-engine",
    "orchestrator",
    "proxxy-gui/src-tauri",
    "workspace-tests",
    "test-server",
    "flow-engine",
]

[workspace.package]
version = "1.1.1"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
hudsucker = "0.20"
rcgen = "0.12"
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "1.0", features = ["api-all"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
sysinfo = "0.30"
axum = "0.8"
tokio-stream = "0.1"
wildmatch = "2.1"
hostname = "0.3"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tower-http = "0.6"

# Test dependencies
proptest = "1.0"
