[package]
name = "attack-engine"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait = "0.1"
regex = "1.10"
url = "2.5"

# Proxxy dependencies
proxy-common = { path = "../proxy-common" }

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"