[package]
name = "orchestrator"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
dashmap = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
async-graphql = { version = "6.0", features = ["chrono", "tracing"] }
proxy-core = { path = "../proxy-core" }
clap = { version = "4.5", features = ["derive"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
base64 = "0.22.1"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
