[package]
name = "orchestrator"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
dashmap = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
async-graphql = { version = "7.1", features = ["tracing"] }
async-graphql-axum = { version = "7.1" }
proxy-core = { path = "../proxy-core" }
proxy-common = { path = "../proxy-common" }
attack-engine = { path = "../attack-engine" }
clap = { version = "4.5", features = ["derive"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
base64 = "0.22.1"
glob = "0.3"
regex = "1.10"
zip = "2.2"
sysinfo = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"
