[package]
name = "proxy-agent"
version = "1.1.0"
edition = "2021"

[dependencies]
proxy-core = { path = "../proxy-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
hostname = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.30"

[dev-dependencies]
axum = { workspace = true }