[package]
name = "proxy-core"
version = "1.1.0"
edition = "2021"

[dependencies]
hudsucker = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
time = "0.3"
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
bytes = "1.0"
http-body-util = "0.1"
async-trait = "0.1"
axum = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
wildmatch = { workspace = true }
regex = "1.10"
url = "2.5"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.10"

proptest = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }