[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "test_server"
path = "test_server.rs"