[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Sunucusu
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Veri İşleme
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# HTTP Yardımcıları (Trace vb. için)
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "test_server"
path = "test_server.rs"