[package]
name = "workspace-tests"
version.workspace = true
edition.workspace = true

[dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tempfile = "3.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
proxy-core = { path = "../proxy-core" }
orchestrator = { path = "../orchestrator" }
proxy-agent = { path = "../proxy-agent" }
anyhow = "1.0"
toml = "0.8"

[dev-dependencies]
proptest = { workspace = true }